Add fonts, header, and contact button

--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 
 <head>
     <title>Justian Meyer</title>
+    <!-- Normalize -->
     <link rel="stylesheet" type="text/css" href="normalize.css" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- Custom stylings -->
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
+    <header>
+        <button class="button-primary">Contact</button>
+    </header>
+
     <h1>Justian Meyer</h1>
 </body>
 
