--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-us">
 
 <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Justian Meyer</title>
+
     <!-- Normalize -->
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <!-- Fonts -->
@@ -17,7 +20,12 @@
         <button class="button-primary">Contact</button>
     </header>
 
-    <h1>Justian Meyer</h1>
+    <main id="frontpage-main">
+        <h1>Justian Meyer</h1>
+    </main>
+
+    <footer></footer>
+
 </body>
 
 </html>
