Core items mocked

--- a/index.html
+++ b/index.html
@@ -21,10 +21,26 @@
     </header>
 
     <main id="frontpage-main">
-        <h1>Justian Meyer</h1>
+        <div id="frontpage-left">
+            <div id="headshot"></div>
+        </div>
+
+        <div id="frontpage-right">
+            <h1>Justian Meyer</h1>
+            <h2>Backend engineer turned frontend</h2>
+            <nav>
+                <ul>
+                    <li><a href="#">About Me</a></li>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Certifications</a></li>
+                </ul>
+            </nav>
+            <img class="icon" src="./images/icons/github_64.png" />
+            <img class="icon" src="./images/icons/linkedin_64.webp" />
+        </div>
     </main>
 
-    <footer></footer>
+    <footer><p>&copy; Justian Meyer, 2021</p></footer>
 
 </body>
 
