--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
     <!-- Custom stylings -->
     <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
@@ -21,13 +23,13 @@
     </header>
 
     <main id="frontpage-main">
-        <div id="frontpage-left">
+        <section id="frontpage-left">
             <div id="headshot"></div>
-        </div>
+        </section>
 
-        <div id="frontpage-right">
+        <section id="frontpage-right">
             <h1>Justian Meyer</h1>
-            <h2>Backend engineer turned frontend</h2>
+            <h2>Frontend Engineer</h2>
             <nav>
                 <ul>
                     <li><a href="#">About Me</a></li>
@@ -37,10 +39,12 @@
             </nav>
             <img class="icon" src="./images/icons/github_64.png" />
             <img class="icon" src="./images/icons/linkedin_64.webp" />
-        </div>
+        </section>
     </main>
 
-    <footer><p>&copy; Justian Meyer, 2021</p></footer>
+    <footer>
+        <p>&copy; Justian Meyer, 2021</p>
+    </footer>
 
 </body>
 
