--- a/index.html
+++ b/index.html
@@ -36,9 +36,13 @@
                     <li><a href="#">Portfolio</a></li>
                     <li><a href="#">Certifications</a></li>
                 </ul>
+                <a href="https://github.com/JGMEYER" target="_blank">
+                    <img class="icon" src="./images/icons/github_64.png" />
+                </a>
+                <a href="https://www.linkedin.com/in/justianmeyer/" target="_blank">
+                    <img class="icon" src="./images/icons/linkedin_64.webp" />
+                </a>
             </nav>
-            <img class="icon" src="./images/icons/github_64.png" />
-            <img class="icon" src="./images/icons/linkedin_64.webp" />
         </section>
     </main>
 
