--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/normalize.css" type="text/css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/styles/main.css" type="text/css" />
+
   <title>Justian Meyer - Frontend Engineer</title>
 </head>
 
